2016-09-25  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* MathTable.h, XeTeXOTMath.cpp: Sync with the upstream..

2016-09-24  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web: Sync with the upstream..

2016-02-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* XeTeX_ext.c: Revert the change on 2015-11-06.
	That is, recover the original *outputdriver = "xdvipdfmx -q -E",
	because asynchronous outputs of XeTeX and xdvipdfmx are messy.

2016-02-07  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web, NEWS: sync with the upstream.

2015-11-06  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* XeTeX_ext.c: Change const char *outputdriver = "xdvipdfmx -q -E";
	as const char *outputdriver = "xdvipdfmx -E"; by removing the quiet
	option, in order to show useful messages for users.

2015-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* image/bmpimage.c, image/pngimage.c: Drop set but unused vars.
	* image/mfileio.c: ANSI C function definition.

2015-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (libxetex_a_CFLAGS): Enable gcc warnings.

	* XeTeX_ext.[ch], XeTeXFontInst{cpp,h}, XeTeXFontMgr.cpp,
	XeTeXLayoutInterface.{cpp,h}, XeTeX_pic.c:
	ANSI C prototypes, unconstify, drop (set but) unused variable,
	remove useless or misleading casts.

2015-08-25  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* XeTeXFontInst.cpp: Support pair kerning for native type1 fonts.
	Thanks Werner Lemberg and Jiang Jiang.

2015-08-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am (xetex_CFLAGS): Enable compiler warnings.
	* xetex.web: Drop unused label 'done'.

2015-07-24  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web, xetex.h: Support pagebox=artbox etc. as in pdfTeX
	in PDF inclusion. It works with a new xetex.def and xdvipdfmx.
	Nothing changes if the present xetex.def is used.

2015-07-11  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>

	* xetex.web: Change \pdfmdfivesum to \mdfivesum, to be consistent
	with \strcmp and \shellescape.
